# VulnDash

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: setup.ps1  setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: ollama.rs
src-tauri/src/commands/: ai.rs  mod.rs  projects.rs  report.rs  scan.rs  tools.rs  watch.rs
src-tauri/src/db/: mod.rs
src-tauri/src/scanner/: cargo_audit.rs  gitleaks.rs  mod.rs  npm_audit.rs  pip_audit.rs
src-tauri/src/score/: mod.rs
src/components/: FindingCard.tsx  FindingDetailPanel.tsx  HistoryView.tsx  OnboardingScreen.tsx  ProjectCard.tsx  ScoreGauge.tsx  SeverityBadge.tsx  Sidebar.tsx
src/hooks/: useTauri.ts
src/types/: index.ts
