[package]
name = "vulndash"
version = "0.1.0"
description = "AI-powered desktop security scanner for developers"
authors = ["Vincent Roussel <viroussel@osullivan-quebec.qc.ca>"]
edition = "2021"

[lib]
name = "vulndash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (GitHub API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Temp directories for GitHub clone
tempfile = "3"

# Regex for secret pattern matching
regex = "1"

# File system watcher for watch mode
notify = { version = "6", features = ["serde"] }
